--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "grocery-admin",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
   "description": "A Strapi application",
+  "license": "MIT",
+  "author": {
+    "name": "A Strapi developer"
+  },
   "scripts": {
+    "build": "strapi build",
     "develop": "strapi develop",
     "start": "strapi start",
-    "build": "strapi build",
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-cloud": "4.20.5",
-    "@strapi/plugin-i18n": "4.20.5",
-    "@strapi/plugin-users-permissions": "4.20.5",
-    "@strapi/provider-upload-cloudinary": "^4.20.5",
-    "@strapi/strapi": "4.20.5",
+    "@strapi/plugin-cloud": "4.21.1",
+    "@strapi/plugin-i18n": "4.21.1",
+    "@strapi/plugin-users-permissions": "4.21.1",
+    "@strapi/provider-upload-cloudinary": "^4.21.1",
+    "@strapi/strapi": "4.21.1",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -22,15 +26,11 @@
     "strapi-plugin-vercel-deploy": "^1.4.0",
     "styled-components": "5.3.3"
   },
-  "author": {
-    "name": "A Strapi developer"
-  },
-  "strapi": {
-    "uuid": "96745278-98c0-479b-a325-2ae13c1c16ad"
-  },
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "strapi": {
+    "uuid": "96745278-98c0-479b-a325-2ae13c1c16ad"
+  }
 }
